[package]
name = "add-header"
description = "A cli to add headers to files"
authors = ["AmeKnite"]
version = "0.4.0"
license = "MPL-2.0"
rust-version = "1.65"
repository = "https://github.com/ameknite/add-header"
readme = "README.md"
edition = "2021"
keywords = ["cli", "header", "notice", "license"]
categories = ["command-line-utilities"]

[dependencies]
argh = "0.1.12"
walkdir = "2.4.0"
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
