[package]
name = "add-header"
description = "A cli to add headers to files"
authors = ["AmeKnite"]
version = "0.4.4"
license = "MPL-2.0"
rust-version = "1.65"
repository = "https://github.com/ameknite/add-header"
readme = "README.md"
edition = "2021"
keywords = ["cli", "header", "notice", "license"]
categories = ["command-line-utilities"]

[dependencies]
argh = "0.1.12"
clap = { version = "4.4.6", features = ["derive"] }
color-eyre = { version = "0.6.2", default-features = false }
walkdir = "2.4.0"
